src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__type_initializers__struct_init_with_wrong_types_does_not_trigger_codegen_validation.snap
---
source: src/codegen/tests/initialization_test/type_initializers.rs
expression: msg
---
error: Some initial values were not generated
  ┌─ <internal>:1:1
  │
1 │ 
  │ ^ Some initial values were not generated


